# goonj

./: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  bench-history.csv  deny.toml
benches/: benchmarks.rs
docs/architecture/: overview.md
docs/development/: roadmap.md
examples/: basic.rs
src/: ambisonics.rs  analysis.rs  beam.rs  binaural.rs  bridge.rs  coupled.rs  diffraction.rs  diffuse.rs  diffusion.rs  directivity.rs  error.rs  fdn.rs  hybrid.rs  image_source.rs  impulse.rs  lib.rs  logging.rs  material.rs  outdoor.rs  portal.rs  propagation.rs  radiosity.rs  ray.rs  resonance.rs  room.rs  scattering.rs  udfa.rs  underwater.rs  vibroacoustics.rs  wav.rs
src/integration/: dhvani.rs  kiran.rs  mod.rs  soorat.rs
tests/: integration.rs
