[package]
name = "goonj"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
license = "GPL-3.0"
description = "Goonj — acoustics engine for sound propagation, room simulation, and impulse response generation"
homepage = "https://github.com/MacCracken/goonj"
repository = "https://github.com/MacCracken/goonj"
readme = "README.md"
documentation = "https://docs.rs/goonj"
keywords = ["acoustics", "audio", "room-simulation", "impulse-response", "ray-tracing"]
categories = ["science", "simulation"]
exclude = [".claude/", ".github/", "docs/", "scripts/"]

[features]
default = []
logging = ["dep:tracing-subscriber"]

[dependencies]
hisab = "0.24"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tracing = "0.1"

# Optional
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"], optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
serde_json = "1"

[[bench]]
name = "benchmarks"
harness = false
